--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,247 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+/* #### first class elements #####*/
+
+h1 {
+	font-size: 57pt;
+}
+
+h2 {
+	font-size: 21pt;
+}
+a {
+	text-decoration: none;
+	color: darkslategrey;
+}
+
+/* ########### NAVIGATION MENU ############*/
+
+nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+nav a{
+	color:#00CED1;
+	text-decoration:none;
+	letter-spacing:3px;
+  }
+
+nav a:hover {
+	color: black;
+}
+
+/*############  buttons  ###################### */
 
 
+.shortBtn {
+	padding: 2%;
+	background-color: white;
+	border: 1px solid black;
+	text-align: center;
+	width: 40%;
+}
+
+.shortBtn:hover {
+	background-color: black;
+	color: greenyellow;
+}
+
+.btn {
+	padding: 5%;
+	background-color: white;
+	border: 1px solid black;
+}
+
+.btn:hover {
+	background-color: black;
+	color: greenyellow;
+}
+
+.textAboveBtn{
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	width: 175px;
+	margin: auto;
+}
+
+.detailsAboveBtn{
+	display: flex;
+	flex-flow: row wrap;
+	border: 1px solid black;
+	background-color: #f4f3f4;
+	align-items: center;
+	width: 48%;
+	height: 18em;
+	padding: 1.0em;
+	margin-top: 1.1em;
+	margin-bottom: 1.1em;
+}
+
+
+
+.contentWidth{
+	/* width: 65%; */
+	width: 876px;
+}
+
+.contentFlex {
+	display: flex;
+	justify-content: center;
+}
+
+.contentFlexVanilla {
+	display: flex;
+}
+
+.roundedRectangle {
+	border-radius: 12%;
+}
+
+.contactInfoParent {
+	/* border: 1px solid red; */
+	display: flex;
+	justify-content: left;
+	margin: auto;
+}
+.contactInfoBlock{
+	display: flex;
+	/* border: 1px solid blue; */
+	justify-content: left;
+	flex-direction: column;
+	width: 200px;
+}
+
+.aboutServices {
+	display: flex;
+	justify-content: left;
+	margin: auto;
+	width: 45%;
+}
+
+.codeSnippet {
+	margin: auto;
+}
+
+.flexSimple {
+	display: flex;
+	align-content: space-between;
+	/* margin: auto; */
+	margin: 1% 1%;
+	font-size: 11pt;
+}
+
+.flexWrapped {
+	display: flex;
+	flex-wrap: wrap;
+	width: 868px;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.flexSimpleOne {
+	display: flex;
+	font-size: 11pt;
+}
+
+.verticalFlexCenter {
+	flex-direction: column;
+	align-items: center;
+}
+
+.verticalFlex {
+	display: flex;
+	flex-direction: column;
+}
+
+
+/* END OF PAGE */
+
+.footerText {
+	text-align: center;
+	margin: 2em;
+}
+
+.copyright {
+	letter-spacing: 2px;
+}
+
+@media(max-width: 800px){
+    .flexSimple .codeSnippet {
+        display: none;
+    }
+
+}
+
+@media(max-width: 500px){
+    .flexSimple .codeSnippet {
+        display: none;
+    }
+}
